Fix button bug on ios causing rounded buttons

--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,12 @@ body{
     flex: 1 1 auto;
 }
 button{
-    aspect-ratio: 1/1;
     width: 75px;
     height: 75px;
+    border-radius: 0px;
+    box-shadow: none;
+    border: 1px solid gray;
 }
 .active{
     background-color: lightsalmon;
-    border: 1px solid gray;
 }
